<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- <string name="app_name">Geocaching-Android</string> -->
    <string name="title_activity_map">Map</string>

    <!-- Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="ekran_Profil">Profil</string>
    <string name="ekran_Ranking">Ranking</string>
    <string name="ekran_Mapa">Mapa</string>
    <string name="ekran_Stworz_wyzwanie">Stwórz wyzwanie</string>

    <!-- Ekran logowania -->
    <string name="app_name">IO GeoCaching</string>
    <string name="hello_world">Hello world!</string>
    <string name="podaj_login">Wpisz login</string>
    <string name="podaj_haslo">Wpisz hasło</string>
    <string name="Login">Login</string>
    <string name="Haslo">Hasło</string>
    <string name="Zapamietac_Dane">Zapamiętaj dane</string>
    <string name="Zatwierdz">OK</string>
    <string name="Rejestruj">Załóż</string>
    <string name="Nazwa_Aplikacji">GeoCaching</string>

    <!-- Profil użytkownika -->
    <string name="nick">Nick</string>
    <string name="email">Email</string>
    <string name="zdobPkt">Zdobyte Punkty</string>
    <string name="ukonczyl">Ukończone gry</string>
    <string name="passReset">Reset Hasła</string>

    <!-- Dodawanie nowego wyzwania -->
    <string name="DNW_Nazwa_Dodawanego_Wyzwania">Nazwa wyzwania</string>
    <string name="DNW_Czy_Wyzwanie_Jest_Prywatne">Prywatne</string>
    <string name="DNW_Nazwa">Nazwa</string>
    <string name="DNW_Hasło_Do_Prywatnego_Wyzwania">Hasło do wyzwania</string>
    <string name="DNW_Opis_Wyzwania">Opis Wyzwania</string>
    <string name="DNW_Opis_Etykieta">Opis</string>
    <string name="DNW_Przycisk">Dalej</string>

    <!-- Dodawanie nowego wyzwania część 2 -->

    <string name="DNW2_cofnij">Cofnij</string>
    <string name="DNW2_Zatwierdź">Zatwierdź wyzwanie</string>
    <string name="DNW2_Dodaj_wskazowke">Dodaj wskazówkę</string>
    <string name="DNW2_wskazówki">Wskazówki</string>
    <string name="title_activity_przejscie_do_dodawania_wskazowek">przejscie_do_dodawania_wskazowek</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_profil">Profil</string>
    <string name="title_activity_dodaj_wskazowke_1">Dodaj_wskazowke_1</string>
    <string name="title_activity_dodaj_wskazowke_2">Dodaj_wskazowke_2</string>
    <string name="title_activity_edycja_wskazowki">Edycja_wskazowki</string>
    <string name="title_activity_ranking">Ranking</string>
    <string name="Zatwierdź">Zatwierdź</string>
    <string name="Opis_Wskazowki">Opis Wskzaówki</string>
    <string name="DNW3_Koordynaty">Koordynaty</string>
    <string name="DNW3_Zdjecie">Dodaj Zdjęcie</string>

    <!-- coś do mapy -->
    <string name="title_activity_mapa">Mapa1</string>
    <string name="title_activity_mapy">Mapa2</string>
    <string name="title_activity_zmiana_hasla">ZmianaHasla</string>

    <!-- Zmiana Hasła -->
    <string name="ZH_Stare_Haslo">Stare hasło</string>
    <string name="ZH_Nowe_Haslo">Nowe hasło</string>
    <string name="ZH_Powtorz_Nowe_Haslo">Powtórz nowe hasło</string>
    <string name="ZH_Edytuj">Zmień Hasło</string>
    <string name="title_activity_informacje_o_wskazowce">informacje_o_wskazowce</string>
    <string name="mapy_activity_akcje">Akcje</string>
    <string name="title_activity_rejestracja">Rejestracja</string>
    <string name="podaj_email">podaj email</string>
    <string name="wróć">wróć</string>
    <string name="title_activity_lista__wskazowek">Lista_Wskazowek</string>
    <string name="title_activity_koordynaty_mapa">Koordynaty z mapy</string>
    <string name="title_activity_lista_dostepnych_wyzwan">Lista_dostepnych_wyzwan</string>

</resources>
