<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="pl.lodz.p.ftims.geocaching.GUI.Profil">

    <!-- Profil -->
<!--
    <item
        android:id="@+id/ekran_Profil"
        android:title="@string/ekran_Profil"
        android:orderInCategory="100"
        app:showAsAction="never" />
-->

    <!-- Ranking -->
    <item
        android:id="@+id/ekran_Ranking"
        android:title="@string/ekran_Ranking"
        android:orderInCategory="101"
        app:showAsAction="never" />

    <!-- Mapa -->
    <item
        android:id="@+id/ekran_Mapa"
        android:title="@string/ekran_Mapa"
        android:orderInCategory="102"
        app:showAsAction="never" />

    <!-- Stwórz wyzwanie -->
    <item
        android:id="@+id/ekran_Stworz_wyzwanie"
        android:title="@string/ekran_Stworz_wyzwanie"
        android:orderInCategory="103"
        app:showAsAction="never" />



    <!-- Settings -->
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="104"
        app:showAsAction="never" />
    <!-- Exit -->
    <item
        android:id="@+id/action_exit"
        android:title="@string/action_exit"
        android:orderInCategory="105"
        app:showAsAction="never" />

</menu>
