<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Logowanie"
    android:background="@drawable/tlo_aplikacja"
    android:gravity="fill">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Nazwa_Aplikacji"
        android:id="@+id/textView"
        android:layout_marginTop="71dp"
        android:textColor="#ff3447ff"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/Pole_Login"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:textColorHighlight="#ff4c93ff"
        android:gravity="fill_vertical|center_horizontal"
        android:hint="@string/podaj_login" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/Pole_Haslo"
        android:layout_below="@+id/Pole_Login"
        android:layout_alignLeft="@+id/Pole_Login"
        android:layout_alignStart="@+id/Pole_Login"
        android:textColorHighlight="#ff4c93ff"
        android:gravity="fill_vertical|center_horizontal"
        android:elegantTextHeight="false"
        android:hint="@string/podaj_haslo"
        android:text="" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Login"
        android:id="@+id/Login_Text"
        android:layout_toLeftOf="@+id/Pole_Login"
        android:layout_alignLeft="@+id/Haslo_Text"
        android:layout_alignStart="@+id/Haslo_Text"
        android:textColor="#ff000000"
        android:layout_alignTop="@+id/Pole_Login"
        android:layout_alignBottom="@+id/Pole_Login"
        android:layout_alignParentBottom="false"
        android:gravity="left|center_vertical"
        android:textSize="22dp" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Haslo"
        android:id="@+id/Haslo_Text"
        android:layout_alignBottom="@+id/Pole_Haslo"
        android:layout_toLeftOf="@+id/Pole_Login"
        android:layout_toStartOf="@+id/Pole_Login"
        android:layout_alignTop="@+id/Pole_Haslo"
        android:textColor="#ff000000"
        android:gravity="left|center_vertical"
        android:layout_marginRight="10px"
        android:elegantTextHeight="false"
        android:textSize="22dp" />

    <CheckBox
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/Zapamietac_Dane"
        android:id="@+id/Zapamietac"
        android:layout_below="@+id/Pole_Haslo"
        android:layout_alignLeft="@+id/Pole_Haslo"
        android:layout_alignStart="@+id/Pole_Haslo"
        android:checked="false"
        android:textColor="#ff000000" />

    <Button
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/Zatwierdz"
        android:id="@+id/OK"
        android:onClick="doLogin"
        android:layout_below="@+id/Zapamietac"
        android:layout_alignRight="@+id/Zapamietac"
        android:layout_alignEnd="@+id/Zapamietac" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/logo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/rejestracja"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="Rejestracja"
        android:layout_alignTop="@+id/OK"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
