<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="pl.lodz.p.ftims.geocaching.Edycja_wskazowki"
    android:background="@drawable/tlo_aplikacja">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="323dp"
        android:layout_height="wrap_content"
        android:layout_x="75dp"
        android:layout_y="440dp">

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/DNW2_cofnij"
            android:id="@+id/Cofnij"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_x="24dp"
            android:layout_y="401dp"
            android:onClick="Cofnij_D3"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/Zatwierdź"
            android:id="@+id/Dodaj"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_x="210dp"
            android:layout_y="410dp"
            android:onClick="Zatwierdź_D3"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="356dp"
        android:layout_height="144dp"
        android:layout_x="11dp"
        android:layout_y="18dp">

        <TextView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Opis_Wskazowki"
            android:id="@+id/Opis_text"
            android:layout_x="15dp"
            android:layout_y="43dp"
            android:gravity="center_vertical"
            android:textColor="#ff000000"
            android:textSize="18dp" />

        <EditText
            android:layout_width="203dp"
            android:layout_height="40dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_x="188dp"
            android:layout_y="54dp" />
    </LinearLayout>

    <TextView
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/DNW3_Koordynaty"
        android:id="@+id/Koordynaty_text"
        android:layout_x="17dp"
        android:layout_y="157dp"
        android:gravity="center_vertical"
        android:textColor="#ff000000"
        android:textSize="18dp" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/DNW3_Zdjecie"
        android:id="@+id/Zdjecie_text"
        android:layout_x="20dp"
        android:layout_y="258dp"
        android:gravity="center_vertical"
        android:textColor="#ff000000"
        android:textSize="18dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="124dp"
        android:layout_x="12dp"
        android:layout_y="300dp">

        <ImageButton
            android:layout_width="44dp"
            android:layout_height="54dp"
            android:id="@+id/ZdjecieKamera"
            android:onClick="ZdjecieKamera2"
            android:layout_x="25dp"
            android:layout_y="308dp" />

        <ImageButton
            android:layout_width="44dp"
            android:layout_height="54dp"
            android:id="@+id/ZdjeciePamiec"
            android:onClick="ZdjeciePamiec2"
            android:layout_x="31dp"
            android:layout_y="385dp" />
    </LinearLayout>

    <ImageView
        android:layout_width="164dp"
        android:layout_height="164dp"
        android:id="@+id/Zdjecie2"
        android:layout_x="179dp"
        android:layout_y="265dp"
        android:adjustViewBounds="true" />

</AbsoluteLayout>
