<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.lodz.p.ftims.geocaching.Rejestracja" 
    android:background="@drawable/tlo_aplikacja">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageViewLogo"
        android:layout_below="@+id/imageViewLogo"
        android:layout_marginTop="0dp"
        android:layout_centerVertical="true"
        android:text="Login"
        android:textSize="22dp"/>

    <TextView
        android:id="@+id/textViewHaslo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewLogin"
        android:layout_below="@+id/textViewLogin"
        android:layout_marginTop="17dp"
        android:text="Hasło"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewHaslo"
        android:layout_below="@+id/textViewHaslo"
        android:layout_marginTop="17dp"
        android:text="Email"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/textViewNick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewEmail"
        android:layout_below="@+id/textViewEmail"
        android:layout_marginTop="17dp"
        android:layout_alignParentBottom="true"
        android:text="Nick"
        android:textSize="22dp"/>

    <EditText
        android:id="@+id/Pole_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/textViewLogin"
        android:layout_alignTop="@+id/textViewLogin"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:gravity="fill_vertical|center_horizontal"
        android:hint="@string/podaj_login"
        android:inputType="textPersonName"
        android:textColorHighlight="#ff4c93ff" />

    <EditText
        android:id="@+id/Pole_Haslo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Pole_Login"
        android:layout_alignTop="@+id/textViewHaslo"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/Pole_Login"
        android:ems="10"
        android:gravity="fill_vertical|center_horizontal"
        android:hint="@string/podaj_haslo"
        android:inputType="textPassword"
        android:textColorHighlight="#ff4c93ff" />

    <EditText
        android:id="@+id/Pole_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Pole_Haslo"
        android:layout_alignTop="@+id/textViewEmail"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/Pole_Haslo"
        android:ems="10"
        android:gravity="fill_vertical|center_horizontal"
        android:hint="@string/podaj_email"
        android:inputType="textEmailAddress"
        android:textColorHighlight="#ff4c93ff" />

    <EditText
        android:id="@+id/Pole_Nick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Pole_Email"
        android:layout_alignTop="@+id/textViewNick"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/Pole_Email"
        android:ems="10"
        android:gravity="fill_vertical|center_horizontal"
        android:hint="podaj nick"
        android:inputType="textPersonName"
        android:textColorHighlight="#ff4c93ff" />

    <Button
        android:id="@+id/OK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:onClick="doRegister"
        android:text="@string/Zatwierdz" />

    <Button
        android:id="@+id/Wroc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/OK"
        android:layout_alignBottom="@+id/OK"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/OK"
        android:text="@string/wróć" />

</RelativeLayout>
